--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "dependencies": {
     "vue": "^2.5.11"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/issochen/vue-del-slider.git"
+  },
+  "keywords": [
+    "vue",
+    "del-slider"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
